# github-status-stats

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  kustomization.yml  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml
crates/ghss_github/: Cargo.toml
crates/ghss_github/src/: apps.rs  call.rs  client.rs  models.rs  oauth.rs  page_links.rs
crates/ghss_importer/: .env.example  Cargo.toml  Dockerfile  cronjob.yml
crates/ghss_importer/src/: build.rs  config.rs  influxdb.rs  main.rs  store.rs
crates/ghss_influxdb/: Cargo.toml
crates/ghss_influxdb/src/: lib.rs  point.rs  query.rs  timestamp.rs
crates/ghss_models/: Cargo.toml
crates/ghss_models/src/: build.rs  lib.rs
crates/ghss_store/: .env.example  Cargo.toml  Dockerfile  build.rs  debug-pvc-deployment.yml  deployment.yml  pvc.yml  service.yml
crates/ghss_store/proto/: health.proto  query.proto  store.proto
crates/ghss_store/src/: config.rs  ctrlc.rs  db.rs  health.rs  main.rs  query.rs  schema.rs  store.rs  telemetry_service.rs
crates/ghss_store/src/db/: mod.rs  read.rs  schema.rs  write.rs
crates/ghss_store_client/: Cargo.toml  build.rs
crates/ghss_store_client/src/: lib.rs
crates/ghss_tracing/: Cargo.toml
crates/ghss_tracing/src/: lib.rs  tonic.rs
crates/ghss_website/: .env.example  Cargo.toml  Dockerfile  deployment.yml  service.yml
crates/ghss_website/src/: config.rs  cookie.rs  github_hooks.rs  github_queries.rs  main.rs  serve_file.rs  telemetry_middleware.rs  templates.rs  token.rs
crates/ghss_website/static/: base.css  dashboard.css  dashboard.js  index.css
crates/ghss_website/templates/: _layout.handlebars  dashboard.handlebars  dashboard.html  index.handlebars  index.html
docker-base/: Dockerfile
docs/: datamodel.md  deployment.md  development.md
grafana/: configmap.yml  deployment.yml  secret.yml  service.yml
grafana/config/: grafana.ini
grafana/dashboards/: builds.json
grafana/provisioning/datasources/: influxdb.yml
importer/: .env.example  Cargo.toml  Dockerfile  cronjob.yml
importer/src/: build.rs  github.rs  grafana.rs  hook.rs  import.rs  influxdb.rs  main.rs
importer/src/transform/: mod.rs
influxdb/: debug-pvc-copy.yml  debug-pvc-deployment.yml  deployment.yml  pvc.yml  secret.yml  service.yml
influxdb/config/: influxdb.conf
k8s/: .env.example.github  grafana.yml  ingress-localhost.yml  ingress.yml
otel-collector/: config.yaml  deployment.yml  service.yml
scripts/: build.ps1  build.sh  create-favicon.ps1  create-import-job-and-follow.sh  deploy.sh  docker-build.ps1  docker-build.sh  docker-run.ps1  docker-run.sh  dotenv.ps1  dotenv.sh  grafana-admin.sh  grafana-users.sh  influxdb-query.sh  influxdb-reset-repository.sh  local-docker-build.ps1
src/: env.js  env.ts  github.js  github.rs  github.ts  index.js  index.ts  influxdb.js  influxdb.ts  main.rs  transform-parser.ts  transform.js  transform.ts
src/github/: call.rs  datetime.rs  days_between.rs
src/transform/: parser.rs
testdata/: export-161389555-builds.csv  export-161389555-commits.csv  export-161389555-hooks.csv  export-161389555-imports.csv  export-214288339-builds.csv  export-214288339-commits.csv  export-214288339-hooks.csv  export-214288339-imports.csv  export-convert.js  exports-build.csv  exports-build.json  exports-commit.csv  exports-commit.json  exports-hook.csv  exports-hook.json  exports-import.csv  exports-import.json
website/: .env.example  Cargo.toml  Dockerfile  deployment.yml  ingress-localhost.yml  ingress.yml
website/src/: cookie.rs  ctrlc.rs  filters.rs  github_hooks.rs  github_queries.rs  grafana_auth.rs  grafana_queries.rs  main.rs  reverse_proxy.rs  templates.rs  token.rs  web_utils.rs
website/src/github/: auth.rs  hooks.rs
website/static/: base.css  dashboard.css  dashboard.js  index.css
website/templates/: dashboard.html  index.html
