[package]
name = "github-status-stats"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11"
chrono = "0.4"
dotenv = "0.15"
futures = "0.3"
itertools = "0.8"
once_cell = "1.2"
regex = "1"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "0.2.0-alpha.6"
