[package]
name = "importer"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
env_logger = "0.7.1"
github_client = { path = "../packages/github_client" }
grafana_client = { path = "../packages/grafana_client" }
influxdb_client = { path = "../packages/influxdb_client" }
lazy_static = "1.4.0"
log = "0.4.8"
secstr = "0.3.2"
serde_json = "1.0.45"
stats = { path = "../packages/stats" }
tokio = { version = "0.2.10", features = ["fs", "macros"] }
