[package]
name = "importer"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
ghss_github = { path = "../packages/ghss_github" }
ghss_influxdb = { path = "../packages/ghss_influxdb" }
ghss_models = { path = "../packages/ghss_models" }
ghss_tracing = { path = "../packages/ghss_tracing" }
itertools = "0.8.2"
lazy_static = "1.4.0"
secstr = "0.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "0.2.13", features = ["fs", "macros"] }
