[package]
name = "ghss_github"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
jsonwebtoken = "7.1.0"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
tracing = "0.1.14"
