[package]
name = "ghss_importer"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
ghss_github = { path = "../ghss_github" }
ghss_store_client = { path = "../ghss_store_client" }
ghss_tracing = { path = "../ghss_tracing" }
itertools = "0.9.0"
secstr = "0.4.0"
serde = { version = "1.0.112", features = ["derive"] }
serde_json = "1.0.55"
tracing = "0.1.15"
tokio = { version = "0.2.21", features = ["fs", "macros"] }
