[package]
name = "ghss_influxdb"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.1"
chrono = "0.4.11"
ghss_tracing = { path = "../ghss_tracing" }
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0.106", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.52"
