[package]
name = "ghss_store"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

[dependencies]
ghss_tracing = { path = "../ghss_tracing" }
hyper = "0.13.7"
opentelemetry = { version = "0.7.0", features = ["http"] }
prost = "0.6.1"
rusqlite = { version = "0.23.1", features = ["bundled"] }
tokio = { version = "0.2.22", features = ["macros", "signal"] }
tonic = "0.3.1"
tower = "0.3.1"

[build-dependencies]
tonic-build = "0.3.1"
