[package]
name = "ghss_store_client"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghss_github = { path = "../ghss_github" }
prost = "0.6.1"
tonic = "0.2.2"

[build-dependencies]
tonic-build = "0.2.2"
