[package]
name = "ghss_store_client"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ghss_github = { path = "../ghss_github" }
opentelemetry = "0.7.0"
prost = "0.6.1"
tonic = "0.3.0"

[build-dependencies]
tonic-build = "0.3.1"
