[package]
name = "ghss_tracing"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libhoney-rust = "0.1.3"
log = "0.4.8"
tokio = { version = "0.2.19", features = ["time"] }
tracing = "0.1.13"
tracing-futures = "0.2.4"
tracing-honeycomb = "0.1.0"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.5"
