[package]
name = "ghss_tracing"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libhoney-rust = "0.1.3"
tokio = { version = "0.2.21", features = ["time"] }
tonic = "0.2.1"
tracing-honeycomb = "0.1.0"
tracing-subscriber = "0.2.5"
