[package]
name = "ghss_website"
version = "0.1.0"
authors = ["Jan Kuehle <jkuehle90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
bytes = "0.5.5"
chrono = "0.4.13"
futures = "0.3.5"
ghss_github = { path = "../ghss_github" }
ghss_store_client = { path = "../ghss_store_client" }
ghss_tracing = { path = "../ghss_tracing" }
handlebars = "3.2.1"
hmac = "0.7.1"
jsonwebtoken = "7.2.0"
regex = "1.3.9"
secstr = "0.4.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
sha-1 = "0.9.1"
tracing = "0.1.15"
tracing-futures = "0.2.4"
tokio = { version = "0.2.21", features = ["macros", "signal"] }
warp = "0.2.3"
